version/2.0/ripscrip/7.0-drawing-ports.md
# 7.0 Drawing Ports

[◀ Prev: 6.2 Asset Delivery & Storage](6.2-asset-delivery-and-storage.md) · [Contents](README.md) · [Next: 7.1 Data Tables ▶](7.1-data-tables.md)

[Drawing ports](../../GLOSSARY.md) - the fundamental 2.x drawing abstraction for screen regions and offscreen (clipboard) surfaces, each with its own coordinate origin and viewport.

## Drawing Ports - What Are They?

_Added in RIPscrip v2.A4._

A drawing port is an area where graphics can be drawn. This is much like having a tablet of paper, where each page can be drawn to individually. However, just like a tablet of paper, only the piece of paper that is on the top of the tablet can be drawn to (the current piece of paper). The same concept applies to drawing ports. At any one moment in time, there is a "current drawing port". This current port is the one that will display graphical drawing operations when they are received.

All defined ports live in the drawing port [data table](7.1-data-tables.md#drawing-port-table) and can be saved/restored through [data backup areas](7.2-data-backup-areas.md).

There are two types of drawing ports:

1. A screen (visual) drawing port, and
2. An offscreen bitmap drawing port (also known as a "Clipboard Port".

### Screen Drawing Ports

A screen drawing port is the most commonly used form of drawing ports. A screen drawing port is a port that is somewhere on top of the screen. What this means is when a graphical drawing operation occurs, it is displayed in that port and subsequently to the screen immediately. Screen drawing ports are methods of dividing up the user's screen into separate regions, of which each can be thought of as completely separate drawing areas. You can switch between them pretty much at will to draw your graphics.

Here is a typical example of one screen and how it can be divided up with multiple drawing ports:

```text
                                 ┌─── Screen boundary
                                 │
                                 ▼
     ╔══════════════════════════════════════════════════╗
     ║ Port 0                                           ║
     ║                                                  ║
     ║  ┌────────────────────┐  ┌────────────────────┐  ║
     ║  │ Port 1             │  │ Port 2             │  ║
     ║  │                    │  │                    │  ║
     ║  └────────────────────┘  └────────────────────┘  ║
     ║  ┌────────────────────────────────────────────┐  ║
     ║  │ Port 3                                     │  ║
     ║  │                                            │  ║
     ║  └────────────────────────────────────────────┘  ║
     ║  ┌────────────────────────────────────────────┐  ║
     ║  │ Port 4                                     │  ║
     ║  │                                            │  ║
     ║  └────────────────────────────────────────────┘  ║
     ╚══════════════════════════════════════════════════╝
```

As you can see, you have quite a bit of flexibility in placing your port's around on the screen. In this example, we have five ports defined on the screen. You might notice that port number 0 doesn't seem to have a rectangle associated with it. Actually, it does - it is the screen's boundary. Port number 0 is defined as the actual screen and cannot be redefined (you can alter its viewport though - see below for more details about viewports). Port 0 is always the full size of the screen. You can create your own screen ports, but port 0 is one that you cannot redefine the boundary of. This gives you the the ability to always switch to port 0 to address the entire screen, but have the luxury of other ports when you only want to work with a portion of the screen.

### Offscreen Drawing Ports (Clipboard Ports)

An offscreen bitmap port, otherwise known as a "clipboard port", is very much like a screen port, but it isn't actually a part of the screen. It is more like another screen that you cannot see, but one that you can still draw to. You might be asking yourself why something like this is part of RIPscrip? The answer is quite simple - they are extremely powerful! An offscreen port can be used for placing a piece of graphics data temporarily while you are showing a dialog box on the screen, only to be restore the original graphics when the user clicks the "OK" button on the dialog box. The graphical data that was overwritten by the dialog box isn't deleted - it's been saved temporarily on a screen that you cannot see, but is restored to the screen when necessary. Another use of this might be if you had a very complicated scene to display, but you didn't want the user to see each little graphics operation until the entire scene was complete; switch to an offscreen bitmap port, draw your scene, then switch back to the screen and copy the offscreen port's graphics to your screen. Voila, the user sees the scene appear on his screen complete - not piecemeal!

There are numerous reasons why you would use offscreen ports; things like storing a bitmap that you just loaded from the hard disk onto an offscreen port so that when you paste it to the screen a large number of times, there isn't a large amount of disk activity on the user's machine. Another good example is in the situation of an online game where the screen is some kind of map, and one or more offscreen ports are used to hold small "icons", or bitmaps of game pieces. Simply copy the images from the offscreen port(s) to appropriate locations on the map and you've accomplished a rather complicated situation without adversely affecting the user's system with intense hard drive activity due to constantly loading bitmaps off the disk - the side effect, the game moves much more swiftly and with a lot less "jerkiness" due to the hard disk accesses.

Just like with screen drawing ports, you can select an offscreen bitmap port as the one which will receive graphical drawing operations. Selecting an offscreen port as the current port let's you draw simple graphics objects, photos and other such things to it. But remember, the graphics you draw to an offscreen port are of little value unless at some point you actually copy it to the screen so that the user can see it.

Some things cannot be done to offscreen ports. For example, you cannot place a mouse field or a clickable button on an offscreen port. The reason for this is that the mouse only has any meaning to the screen - the environment that the user interacts with. How can the user click on a button that he can't see? He can't. You also cannot place [text windows](1.4-terminal-ansi-view.md) or assign resident query expressions to offscreen ports (these topics are described more fully in later sections).

An offscreen port is most easily thought of as a graphics screen that you can't see. You can work with it to your heart's content, but the user can't see the contents of it until you copy the data to the screen. As long as you keep this one fundamental concept in mind, there should be no confusion about ports.

The 1.54-era clipboard commands now ride on top of these ports - see [4.0 Icons & Bitmaps](4.0-icons-and-bitmaps.md).

### Ports and Coordinates

A port is a specific drawing area. No matter whether the port is a screen port of an offscreen bitmap port, it is still a drawing area, and as such, it has a legal number of horizontal and vertical pixels that can be drawn to. Every graphical drawing operation uses graphical coordinates with which they draw their image to the current port. For example, a circle needs to know the center point, and the radius of the circle in order to draw itself.

Each port has what can be thought of as its own set of coordinates. Just like the screen where (0,0) is the upper-left corner of the screen, when a port is active (ie, current), (0,0) is the coordinate of the upper-left corner of the drawing port. If a port had a width of W and a height of H, then the lower-right coordinate would be (W-1,H-1). This holds true for all drawing ports, even offscreen bitmap ports.

For example, if you draw a circle at (50,50) with a radius of (25,25) to the current port (a screen port), then you might have something like the following diagram:

```text
                               ┌──── Screen Boundary
 (0,0)                         ▼
   ╔══════════════════════════════════════════════════╗
   ║                                                  ║
   ║    ┌───────────────────────────────────────┐     ║
   ║    │(10,10)            │◄─25─►│            │◄───────Port
   ║    │                 ▄▄▄▄▄                 │     ║
   ║    │              ▄▀▀     ▀▀▄              │     ║
   ║    │             █           █             │     ║
   ║    │            █      ■ ◄─── █ ──────────────────── (60,60) on
   ║    │             █  (50,50)  █             │     ║   the screen
   ║    │              ▀▄▄     ▄▄▀              │     ║
   ║    │                 ▀▀▀▀▀                 │     ║
   ║    │                              (124,124)│     ║
   ║    └───────────────────────────────────────┘     ║
   ║                                                  ║
   ╚══════════════════════════════════════════════════╝
```

In this example, the port starts at (10,10) on the screen and goes down to (124,124) on the screen (a width of 115 and a height of 115). Since you said to draw the circle centered at (50,50) in the current port, what actually happens on the screen is that the circle is physically drawn at (50+10,50+10) to the screen, or centered at the "absolute" coordinate of (60,60) in relation to the actual screen.

As you can see, each port can be thought of as its own little drawing universe, with its own set of coordinates. This makes drawing things like graphs, or showing game map windows easy - without having to make extensive calculations in the host software to figure out where things need to be placed. This is considered "port relative" coordinates.

Screen ports are defined as some location on the actual screen from the upper-left corner to the lower-right corner. From this information, the width and height of the port can be easily calculated.

Offscreen ports are a bit different though. Since they're not part of the user's actual screen, they don't have this upper-left location on the screen. In this manner, an offscreen port is always thought of as having an upper-left corner of (0,0) and its lower-right corner as (W-1,H-1).

### Ports and Viewports

Each drawing port has an associated [viewport](../../GLOSSARY.md), or clipping rectangle. A viewport is a rectangle inside the port that defines the drawing limits inside that port. Its similar in concept to a coloring book with invisible lines. You can draw all you want, but you can't go outside the lines. If any operation would extend beyond the edge of this clipping rectangle, it will be truncated. For example, if you have a drawing port that is 100x100 pixels in size, and you define the viewport to be from (25,25) to (74,74), you would have a 50x50 drawing area right in the center of the drawing port. If you then draw a circle in the exact center of the drawing port with a radius of 60 pixels, you would have pieces of the circle that extend beyond the top, left, bottom and right borders of the viewport. What you would see would be four arcs in each corner of the viewport as in the following example:

```text
                           Viewport from (25,25) to (74,74)
                           ───────┬────────────────────────
         (0,0)                    │
            ╔═════════════════════│════╗
            ║          ░░░░░      │    ║
            ║       ░░░     ░░░   ▼    ║
            ║   ┌─██───────────██─┐    ║
            ║   │█               █│    ║
            ║   █                 █    ║
            ║  ░│                 │░   ║
            ║ ░ │                 │ ░  ║
            ║ ░ │                 │ ░  ║
            ║ ░ │                 │ ░  ║
            ║  ░│                 │░   ║
            ║   █                 █    ║
            ║   │█               █│    ║
            ║   └─██──────────-██─┘    ║
            ║       ░░░     ░░░        ║
            ║          ░░░░░           ║
            ╚══════════════════════════╝ (99,99)
```

If you notice in the above diagram, the rectangle inside the port defines the viewport. The solid squares (█) denote pixels inside the viewport that would actually be drawn, and the shaded squares (░) show pixels that will not be drawn because they are outside the viewport.

You can alter the location and size of the viewport inside any given drawing port. By default, the viewport is set to the full size of the drawing port when the port is created. If you attempt to make the viewport go outside the actual port, it will be adjusted to fit so that it is completely within the port. If an attempt is made to define a viewport that is completely outside the boundary of its port, then the definition is ignored as an error condition. If the lower-right corner is outside the boundary of the port, then the lower-right corner of the newly defined viewport is set to the lower-right corner of the port itself.

Just like drawing ports, a viewport also "adjusts" drawing coordinates. When you alter the location of a viewport inside of a drawing port, the origin (0,0) for drawing operations relates to the upper-left corner of the viewport itself, not the actual underlying drawing port. All drawing operations pertain to a port's viewport, not the port itself. The port is considered the maximum limits for the viewport inside - just like the screen, you can only draw to areas inside the screen; the same applies to viewports and ports.

As an example, let's say you have a screen port defined and you alter the viewport (remember, by default it is the full size of the port when the port is defined until you re-define it). The following diagram will give you an idea of our example:

```text
                          ╔════ Screen boundary
                          ▼
╔═════════════════════════════════════════════╗
║(0,0) screen                                 ║
║    ┌───────── (0,0) port                    ║
║    ▼          (25,25) screen                ║
║    ■───────────────────────────────────┐ ◄══════ Port boundary
║    │           │ (0,0) viewport        │    ║
║    │        ┌──┤ (40,40) port          │    ║
║    │        ▼  │ (65,65) screen        │    ║
║    │        ■─────────────────────┐    │    ║
║    │        │                     │    │    ║
║    │        │                     │ ◄═══════════ Viewport boundary
║    │        │          ■          │    │    ║
║    │        │          ▲          │    │    ║  │ (130,130) viewport
║    │        └──────────│──────────■ ◄──────────┤ (170,170) port
║    │                   │               │    ║  │ (195,195) screen
║    │                   │               │    ║
║    └───────────────────│───────────────■ ◄────── (200,200) port
║                        │                    ║    (225,225) screen
╚════════════════════════│════════════════════╝
                         │    │ (50,50) viewport
                         └────┤ (90,90) port
                              │ (125,125) screen
```

In this example, our port is defined from (25,25) to (225,225) on the screen. This makes our port 201 pixels wide and 201 pixels tall. Our viewport starts at (40,40) in the port's coordinate system and ends at (170,170). This makes our viewport 131 pixels wide and 131 pixels tall. The upper-left coordinate of the viewport would map to the screen coordinates (25+40,25+40) or (65,65), and the lower-right corner would map to (25+40+130,25+40+130) or (195,195).

As you can see, mapping a screen port's coordinates to those actually used on the screen can get quite involved. But when you get down to the benefits of coordinate systems, this approach provides quite a bit of flexibility in moving things around without having to change coordinate systems all the time.

### Ports, Viewports and Graphical Operations

We've already discussed how a viewport "truncates" a graphical operation if it extends beyond the border of the port's viewport.

What if you're copying graphical data from one port to another? Graphics data can only be copied from one port to another in rectangular portions, and just like all other graphical operations, this kind of situation adheres to the viewports of both the source and the destination ports' viewports! Let's take an example where you are copying a rectangle of graphics from port 1 to port 2. For sake of clarity, we'll copy the entire viewport over (not a sub-area of the viewport). The following diagram shows what would happen if the two viewports aren't the exact same size (specifically, the source viewport is larger than the destination viewport):

```text
      ┌─── Port 1's viewport             ┌─── Port 2's viewport
      │                                  │
╔═════│═══════════════════════╗     ╔════│══════════════════╗
║     ▼                       ║     ║    ▼                  ║
║   ┌───────────────────┐     ║     ║ ┌─────────────┐       ║
║   │███████████████████│     ║     ║ │█████████████│░░░░░  ║
║   │███████████████████│     ║     ║ │█████████████│░░░░░  ║
║   │███████████████████│     ║     ║ │█████████████│░░░░░  ║
║   │███████████████████│     ║     ║ └─────────────┘░░░░░  ║
║   │███████████████████│     ║     ║  ░░░░░░░░░░░░░░░░░░░  ║
║   └───────────────────┘     ║     ║                       ║
╚═════════════════════════════╝     ╚═══════════════════════╝
            Port 1                            Port 2
```

The squares that are shown as solid (█) are the graphics data that is to be copied (port 1), and the graphics data that is actually copied (port 2). The shaded squares (░) are graphics data from the source viewport that aren't copied to the destination. This shows how a viewport "truncates" graphical drawing operations, even when copying data from one port to another.

### Copying Data From One Port to Another

When you copy graphical data from one port to another (or to another location on the same port for that matter), you are duplicating the graphical contents of the source port onto the destination port. Whether the result is an exact replica of the original image or not is another matter. Whenever you copy a rectangle of data from one port to another, you need to specify a rectangle in the source port, and another one in the destination port. These two rectangles do not need to be the same pixel size. If they are different either in the width or height dimensions, then scaling of the source image will occur! For example, if the source image's rectangle doesn't have the same dimensions as the rectanalge in the destination port, you could have a situation similar to the following:

```text
╔══════════════════════════════╗   ╔══════════════════════════════╗
║   ┌────────────────────┐     ║   ║  ┌────────────────────────┐  ║
║   │██▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀██│     ║   ║  │██▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀██│  ║
║   │█ ▀▄            ▄▀ █│     ║   ║  │█ ▀▄                ▄▀ █│  ║
║   │█   ▀▄        ▄▀   █│     ║   ║  │█   █▀▀▀▀▀▀▀▀▀▀▀▀▀▀█   █│  ║
║   │█     █▀▀▀▀▀▀█     █│     ║   ║  │█   █▄▄▄▄▄▄▄▄▄▄▄▄▄▄█   █│  ║
║   │█     █      █     █│     ║   ║  │█ ▄▀                ▀▄ █│  ║
║   │█     █      █     █│     ║   ║  │██▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄██│  ║
║   │█     █▄▄▄▄▄▄█     █│     ║   ║  └────────────────────────┘  ║
║   │█   ▄▀        ▀▄   █│     ║   ║                              ║
║   │█ ▄▀            ▀▄ █│     ║   ║                              ║
║   │██▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄██│     ║   ║                              ║
║   └────────────────────┘     ║   ║                              ║
╚══════════════════════════════╝   ╚══════════════════════════════╝
        Source (Port 1)                  Destination (Port 2)
```

Notice that the image in the destination is shorter, but much wider than the original. This is because in this example we specified our destination rectangle to be shorter, but wider in size than the original image in the source port. If the two rectangles had the same width and height values, then our destination image would be pixel-for-pixel identical to the original (providing that the viewport of the destination port didn't truncate the image of course).

When copying rectangular pieces of data from one port to another, you have to be careful about viewports. If either the source or the destination rectangle are completely outside that port's viewport, then the copy operation isn't performed - nothing would be visible if it did happen, because either the source or the destination image wouldn't be visible inside the viewport.

Here is another example showing a straight copy operation without any scaling being performed. We are assuming that the source and destination rectangles are the same size. The port's boundary and it's viewport are shown in the following diagram:

```text
     ╔════════════════════╗       ╔═══════════════════════════╗
     ║  ┌────────────┐    ║       ║  ┌───────────────────┐    ║
     ║  │██  ██  ██  │░░░ ║       ║  │██  ██  ██  ░░░░   │    ║
     ║  │  ██  ██  ██│░░░ ║       ║  │  ██  ██  ██░░░░   │    ║
     ║  │██  ██  ██  │░░░ ║       ║  │██  ██  ██  ░░░░   │    ║
     ║  │  ██  ██  ██│░░░ ║       ║  │  ██  ██  ██░░░░   │    ║
     ║  │██  ██  ██  │░░░ ║       ║  │██  ██  ██  ░░░░   │    ║
     ║  │  ██  ██  ██│░░░ ║       ║  │  ██  ██  ██░░░░   │    ║
     ║  └────────────┘░░░ ║       ║  └───────────────────┘    ║
     ║   ░░░░░░░░░░░░░░░░ ║       ║   ░░░░░░░░░░░░░░░░        ║
     ║   ░░░░░░░░░░░░░░░░ ║       ║   ░░░░░░░░░░░░░░░░        ║
     ╚════════════════════╝       ╚═══════════════════════════╝
```

The shaded squares (░) are graphics that extend beyond the source's viewport. Those pixels aren't copied to the destination port, but they are shown in the upper-right diagram to show where the graphics would have been in the destination port if they were copied.

Let's take another example but this time we will show scaling because this situation may not be intuitive. Let's assume that our source rectangle is twice as large as our destination rectangle both in the width and height dimensions. This means that our image will be reduced by 1/2. But what happens if the source image needs to be "truncated" to fit in the viewport? The answer is simple - only the data that remains after truncation is scaled into the destination rectangle. If the destination rectangle also had to be truncated, then the scaling is still performed. Under no circumstances will a vertical or horizontal "blank" zone be created during scaling. When you say "scale to fit", it does exactly what you told it to - it makes the graphics fit in the given area. Here is the diagram that shows this situation:

```text
          ╔════════════════════╗       ╔══════════════╗
          ║  ┌────────────┐    ║       ║  ┌─────────┐ ║
          ║  │██  ██  ██  │░░░ ║       ║  │▀▄▀▄▀▄░░ │ ║
          ║  │  ██  ██  ██│░░░ ║       ║  │▀▄▀▄▀▄░░ │ ║
          ║  │██  ██  ██  │░░░ ║       ║  │▀▄▀▄▀▄░░ │ ║
          ║  │  ██  ██  ██│░░░ ║       ║  │░░░░░░░░ │ ║
          ║  │██  ██  ██  │░░░ ║       ║  │░░░░░░░░ │ ║
          ║  │  ██  ██  ██│░░░ ║       ║  └─────────┘ ║
          ║  └────────────┘░░░ ║       ╚══════════════╝
          ║   ░░░░░░░░░░░░░░░░ ║
          ║   ░░░░░░░░░░░░░░░░ ║
          ╚════════════════════╝
```

## RIP_DEFINE_PORT

_Define a drawing port_

_Added in RIPscrip v2.A3._

|               |                                                    |
| ------------- | -------------------------------------------------- |
| **Level**     | 2                                                  |
| **Command**   | `P`                                                |
| **Arguments** | `port-num:1 x0:XY y0:XY x1:XY y1:XY flags:4 res:4` |

**Format:** `!|2P <port-num> <x0> <y0> <x1> <y1> <flags> <res>`

**Example:** `!|2P300002F2F00010000`

**Attributes used:** viewport, port, base math (current setting)

This command physically defines a new graphical [drawing port](7.0-drawing-ports.md). The port can be either onscreen (a video port) or an offscreen bitmap port (a Clipboard Port). When defined, the newly created port becomes the current graphical drawing port (if the `<flags>` say to - see below).

If the `<port-num>` that you are trying to define is already defined, and the port isn't protected, it is redefined (ie, deleted then re-created using the new parameters). If the port is defined and protected, then the port definition operation will fail and the port will be switched back to the screen port (#0) as previously described.

The `<port-num>` parameter determines which entry in the master Port Table you wish to define. When working with ports, you need to be concerned about the port number you're working with - that's the location of the port, and that's how you access it when you need to switch ports - by port number. You are allows up to 36 separate grpahical ports (0-35 in decimal). Port #0 cannot be re-defined because it is always defined as the Screen Port. You can however, alter the viewport for Port #0 to make a sub-area on the screen to draw in (and clip). The viewport for Port #0 may also be deactivated as can the viewport on any other graphical Port. _(v2.A4)_

To create a port, you need to specify the upper-left coordinate corner of the port and the lower-right coordinate of the rectangle bounding the port. The configuration of coordinates is different depending on the type of graphical port as declared by the `<flags>` parameter (see below). For Video Ports (onscreen ports), the `<x0>` and `<y0>` parameters define the upper-left corner of the port on the video screen, and the `<x1>` and `<y1>` values define the lower-right corner of the port. Together, they define the pixel width and height of the port (this adheres to global world coordinate systems). For Clipboard Ports (offscreen bitmap ports), you cannot have an upper-left corner - so the `<x0>` and `<y0>` parameters must be set to zero.

Once defined, the viewport for the given port is defined as the size of the port itself (you may change it with a [RIP_VIEWPORT](1.3-world-view-virtual-canvas.md#rip_viewport) command later if you wish). This makes it so that the entire port may be drawn into. If you need to define a sub-area of the port as a clipping boundary, modify the viewport for that graphical port.

The `<flags>` parameter for this command allows you to make some important distinctions to the port. The possible port flags are OR'd together to create one final number where each bit represents some flag value. The possible flag values and what they mean are described as follows:

| Value | Description |
| --- | --- |
| 1 | Port is an offscreen (Clipboard) port. When this flag is specified, the `<x0>` and `<y0>` parameter are assumed to be zero (even if they aren't set to 0, they are treated as if they were). When a port is declared as a Clipboard Port, all graphical operations are performed to an offscreen bitmap port and do not appear on the screen (without you specifically using a port copy operation). If this flag is omitted, then the port is treated as a Video Port and any graphics drawn to the port will show up on the screen immediately (providing the viewport for this port isn't deactivated). |
| 2 | Port is made the active drawing port immediately upon completion of this command. This has the net effect of creating the port and immediately switching to it. Without this flag, you would have to use a [RIP_SWITCH_PORT](#rip_switch_port) command to draw directly into this port. |
| 4 | Deactivate this port's viewport immediately upon creation. This has the net effect of creating the port and setting the viewport to a deactivated status. _(v2.A4)_ |
| 8 | The newly defined port is immediately protected. This means that the port cannot be deleted without explicitly unprotecting the port. |

> **NOTE:** The `<res>` parameter is reserved for future use and should be set to "0000" for future compatibility with later RIPscrip revisions.

## RIP_SWITCH_PORT

_Switches to a new port_

_Added in RIPscrip v2.A3._

|               |                            |
| ------------- | -------------------------- |
| **Level**     | 2                          |
| **Command**   | `s`                        |
| **Arguments** | `port-num:1 flags:2 res:3` |

**Format:** `!|2s <port-num> <flags> <res>`

**Example:** `!|2s500000`

**Attributes used:** port, base math (current setting)

This command physically changes whichever port is currently active. You may specify a port number from 0-35 (36 ports total). If the designated port doesn't exist, then the port is automatically switched to port #0 (the screen's port). This has the side-effect that when the operation fails (ie, the destination port doesn't exist), all subsequent graphics operations would be sent to the screen which would give you a visual impression that something is very wrong.

When the new port is activated, all subsequent drawing operations are performed on it instead of the previously defined port.

The `<flags>` parameter for this command allows you to specify one or more things that can alter the switching operation. The allowable flag values and their meanings are described as follows:

| Value | Description                                               |
| ----- | --------------------------------------------------------- |
| 1     | The destination port is immediately protected.            |
| 2     | The destination port is immediately un-protected          |
| 4     | The port being switched from is immediately protected.    |
| 8     | The port being switched from is immediately un-protected. |

If you try to switch to the same port that is already in use, nothing happens except for possibly the activation of one or more flag values. This allows you to protect or unprotect a port without switching ports. Port #0 cannot be either protected nor unprotected.

> **NOTE:** The `<res>` parameter is reserved for future use and should be set to "000" for future compatibility with later RIPscrip revisions.

## RIP_DELETE_PORT

_Deletes a specific port definition_

_Added in RIPscrip v2.A3._

|               |                                |
| ------------- | ------------------------------ |
| **Level**     | 2                              |
| **Command**   | `p`                            |
| **Arguments** | `port_num:1 dest_port:1 res:2` |

**Format:** `!|2p <port_num> <dest_port> <res>`

**Example:** `!|2p1000`

**Attributes used:** port, base math (current setting)

This command physically deletes one or more graphical ports. The exact port depends on the `<port_num>` parameter. If the port number specified is between 1-35, then the given port is deleted (providing of course that it is unprotected). If you attempt to deleted a protected port, then this command will fail. If you attempt to delete port #0 (the screen port), then you will be activating a special case of this command - all unprotected ports from 1-35 are automatically deleted. This is a good garbage collection command mode when you want to start with a new slate of ports without the overhead of sending many delete port commands.

The `<dest_port>` parameter defines the port number that will be switched to after the delete operation is finished. Typically, this will be set to port #0 (switch to screen port), but it need not be. If the destination port is undefined, then it will automatically switch to port #0. If you instruct this command to delete all ports, then the destination port may or may not be set to the screen port - it all depends on whether or not the destination port both exists, and is protected - remember, a protected port cannot be deleted with this command without first being unprotected. So, if you delete all ports and switch to another port that isn't port #0, and that port is protected, then that protected port is selected as the new active port. If however, that port doesn't exist (ie, it did exist at the beginning of this command, but wasn't protected), then the screen port #0 will be selected.

> **NOTE:** The `<res>` parameter is reserved for future use and should be set to "00" for future compatibility with later RIPscrip revisions.

## RIP_PORT_COPY

_Copies graphics data from one port to another_

_Added in RIPscrip v2.A3._

|  |  |
| --- | --- |
| **Level** | 2 |
| **Command** | `C` |
| **Arguments** | `source_port:1 sx0:XY sy0:XY sx1:XY sy1:XY dest-port:1 dx0:XY dy0:XY dx1:XY dy1:XY write-mode:1 res:5` |

**Format:** `!|2C <source_port> <sx0> <sy0> <sx1> <sy1> <dest_port> <dx0> <dy0> <dx1> <dy1> <write_mode> <res>`

**Example:** `!|2C300002020500002020100000`

**Attributes used:** viewport, port, base math (current setting)

This command copies graphics data from one port to another (or possibly even the same port). The area copied is a rectangular area based on the (sx0,sy0)..(sx1,sy1) parameters in the `<source_port>` and the (dx0,dy0)..(dx1,dy1) parameters in the `<dest_port>`. The `<source_port>` and `<dest_port>` parameters specify which port numbers are to be used for the source and destination respectively. They may be set to the same port number which signifies that a bit-blit operation is to occur from one location of the current port to another. Both the source and destination ports are specified as port numbers from 0-35. If either port doesn't exist (or is deactivated) then this command will do nothing.

The source port parameters (sx0,sy0)..(sx1,sy1) define the upper-left and lower-right corners of the rectangle in the source port that is to be the source image data. If all four parameters are set to zero, then the entire source port's viewport is used as the image. These parameters determine the portion of the source port that is to be used to copy to the destination port. The image data is taken from within the port's currently defined viewport. If the (sx1,sy1) parameters takes the image out of the bounds of the source port's viewport, then the values are adjusted to make it fit inside the viewport.

The destination port parameters (dx0,dy0)..(dx1,dy1) define the destination rectangle in the destination port that will receive the graphical data. The (dx0,dy0) parameters define the upper-left corner of the destination location of the bitmap data. If the (dx1,dy1) parameters are set to zero, then the image is copied from the source port verbatim - with the exact same pixel dimensions as the source image rectangle. If these two values are not set to zero, then scaling of the source image may be performed. Whether or not scaling is performed or not depends on one fact - does the physical pixel size (height and width) of the source image rectangle exactly match the pixel size (height and width) of the destination port rectangle? If the pixel dimensions match exactly, then no scaling is performed on the rectangle. However, if the pixel size in either the vertical or horizontal directions are different, then the image is scaled to fit in the desired rectangle. When we talk about "pixel size", we are referring to the low-level device pixel size of the image. This means that we take into account world coordinate translation and viewport coordinate translations first, then compare the raw pixel sizes of the source and destination rectangles. If they differ, then we perform scaling of the bitmap. Otherwise we copy it over verbatim. If the destination rectangle coordinates are set all to zeros, then the image is placed at (0,0) in the destination port's viewport and the image will fill the entire port's viewport.

The `<write_mode>` parameter determines the Raster Transfer mode that is used to write the image data to the destination rectangle. The possible value and their various effects on the destination image are as follows:

| Mode | Description                                          | Logical |
| ---- | ---------------------------------------------------- | ------- |
| 0    | Copy the image to the port verbatim                  | COPY    |
| 1    | Exclusive-OR image with the one already on the port  | XOR     |
| 2    | Logically OR image with the one already on the port  | OR      |
| 3    | Logically AND image with the one already on the port | AND     |
| 4    | Copy the inverse of the image onto the port          | NOT     |

Working with a port copy operation, the source rectangle for the image is contained in the source port number. The destination rectangle is based in the destination port. If either of these rectangles extend outside of the respective ports' viewports, then they are adjusted accordingly - possibly scaling the image when it wasn't intended.

> **NOTE:** The `<res>` parameter is reserved for future use and should be set to "00000" for future compatibility with later RIPscrip revisions.

## RIP_PORT_WRITE

_Writes port image to a disk-based bitmap file_

_Added in RIPscrip v2.A3._

|               |                                                     |
| ------------- | --------------------------------------------------- |
| **Level**     | 2                                                   |
| **Command**   | `W`                                                 |
| **Arguments** | `port_num:1 x0:XY y0:XY x1:XY y1:XY res:4 filename` |

**Format:** `!|2W <port_num> <x0> <y0> <x1> <y1> <res> <filename>`

**Example:** `!|2W5000020200000FILENAME.BMP`

**Attributes used:** viewport, port, base math (current setting)

This command physically takes the contents of the specific graphics port and writes it to a disk-based bitmap file (eg, a .BMP file). The specific area of the given port that is written to the disk is based on the (x0,y0)..(x1,y1) parameters. If all of these parameters are set to zeros, then the entire port's viewport is written to the desired bitmap file. If the (x1,y1) paraemters are set to zero, then the lower-right corner of the image is taken to be the lower-right corner of the port's viewport. The (x0,y0) parameters determine the upper-left corner of the image's location in the given graphics port. You could use any of the following three variations:

| X0 | Y0 | X1 | Y1 | Description |
| --- | --- | --- | --- | --- |
| 0 | 0 | 0 | 0 | Grab the entire port's viewport for the image to be saved. |
| 25 | 25 | 0 | 0 | Grab the image area from (25,25) to the lower-right of the port's viewport as the image data to be saved. |
| 25 | 25 | 100 | 100 | Save the image data from (25,25) to (100,100) in the given graphics port to the destination bitmap file. |

The `<port_num>` parameter determines which graphics port is to be the source of the image data. If that port is undefined, or the X/Y parameters place the graphics data off the port's viewport, then this command is ignored. If the (x0,y0) parameters fall inside the port's viewport, but the (x1,y1) parameters do not, then the lower-left corner is adjusted appropriately (as if the user specified (0,0) as the lower-left corner - see above).

> **NOTE:** The `<res>` parameter is reserved for future use and should be set to "0000" for future compatibility with later RIPscrip revisions.

---

[◀ Prev: 6.2 Asset Delivery & Storage](6.2-asset-delivery-and-storage.md) · [Contents](README.md) · [Next: 7.1 Data Tables ▶](7.1-data-tables.md)
